ops/ingress/httproute-kiali.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: http
  namespace: istio-system
spec:
  parentRefs:
  - name: internal-lb-gateway-handymancan
    namespace: istio-ingress
  hostnames: 
    - kiali.handymancan.com
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: kiali
      port: 20001
